--- a/src/app/components/opning/opning.module.css
+++ b/src/app/components/opning/opning.module.css
@@ -10,7 +10,6 @@
   to {
     transform: translateX(100%);
     transform: scale(10);
-    opacity: 0;
     pointer-events: none;
   }
 }
@@ -26,7 +25,6 @@
   }
   100% {
     /* これすぐに消える状態だからあとでコード書いて消す */
-    opacity: 0;
     pointer-events: none;
     transform: scale(10);
   }
@@ -41,7 +39,7 @@
 
 .back_color {
   background-color: yellow;
-  height: 5000px;
+  height: 1000px;
   padding: 20px;
   animation: back_d 8s ease-in-out forwards;
 }
@@ -61,7 +59,7 @@
   left: 70%;
   top: 0;
   animation: fade-in_tate 5s ease-in-out forwards;
-  background-color: aliceblue;
+  background-color: white;
   color: red;
   animation-fill-mode: forwards;
   writing-mode: vertical-lr;
@@ -77,7 +75,7 @@
   left: 0;
   border-right: 100px;
   animation: fade-in 5s ease-in-out forwards;
-  background-color: aliceblue;
+  background-color: white;
   color: blue;
   animation-fill-mode: forwards;
   position: absolute;
