最初の画像微調整。ヘッダー作成。最初のアニメーション終了時にふわっとコンテンツを出すように改修

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -249,3 +249,16 @@ a.secondary {
   position: absolute;
   font-size: 75px;
 }
+.fuwatto {
+  opacity: 0;
+  transform: translateY(20px); /* 少し下から浮かび上がる */
+  animation: fadeInUp 0.8s ease-out forwards;
+}
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+    animation-delay: 0.3s;
+  }
+}
