--- a/src/app/components/Header/header.module.css
+++ b/src/app/components/Header/header.module.css
@@ -2,7 +2,7 @@
   display: flex;
   height: 60px;
   align-items: center;
-  background-color: #f8b500;
+  background-color: red;
 }
 .header__flex ul {
   display: flex;
