--- a/src/app/components/modal/modal.module.css
+++ b/src/app/components/modal/modal.module.css
@@ -1,12 +1,13 @@
 /* モーダル全体の枠 */
 .modalContent {
   background-color: #ebe9d6;
-  padding: 5px 20px 60px 20px;
+  padding: 5px 20px 40px 20px;
   /* margin: 300px auto; */
-  margin-left: 40%;
+  margin: 40%;
   width: 300px;
   border-radius: 8px;
-  position: fixed;
+  position: sticky;
+
   z-index: 1001;
   border: 5px solid black;
   top: 30%;
@@ -39,9 +40,9 @@
 .ok {
   border-radius: 20px;
   background: red;
-  /* position: relative;
-  display: flex; */
-  margin: 0 auto;
+  position: relative;
+  display: block;
+  margin: auto;
   max-width: 260px;
   font-size: x-large;
   font-weight: 800;
@@ -49,6 +50,13 @@
   transition: 0.3s;
   color: white;
   justify-content: center;
+  z-index: 1;
+}
+
+.ok:hover {
+  color: red;
+  background: white;
+  transform: scale(1.1);
 }
 /* ×ボタン */
 .batsu {
@@ -66,4 +74,15 @@
   position: absolute;
   width: 20px;
   height: 20px;
+}
+
+/* モーダルをふわっとだす */
+.fuwatto_fade_in {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+}
+.is_visible {
+  opacity: 1;
+  transform: translateY(0);
 }
