--- a/src/app/components/main/main.module.css
+++ b/src/app/components/main/main.module.css
@@ -116,6 +116,10 @@
   justify-content: center;
 }
 
+.button:hover {
+  transform: scale(1.1);
+}
+
 /* .button div {
   font-size: 20;
   justify-content: center;
