--- a/src/app/kanryo/[tohyoid]/page.module.css
+++ b/src/app/kanryo/[tohyoid]/page.module.css
@@ -1,38 +1,46 @@
 .back {
-  position: relative;
-  width: 100%;
+  position: absolute;
+  width: 100vw;
   z-index: 0;
   text-align: center;
   background-color: #ebe9d6;
-  background-image: url("投票完了背景.jpg");
+  background-image: url("赤舞台大.jpg");
   background-repeat: no-repeat;
-  height: 1000px;
+  background-size: contain;
+  /* top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0; */
+  height: 100vh;
+  margin: 0; /* マージンをリセット */
+  padding: 0; /* パディングをリセット */
 }
 
 .back a {
   padding: 24px 24px;
-  background-color: yellowgreen;
+  background-color: rgb(240, 10, 94);
   border-radius: 12px;
   text-decoration: none;
   transition: 0.3s;
   margin: 20px;
   text-align: center;
+  color: aliceblue;
   /* position: absolute;
   display: flex;
   top: 500px; */
 }
 .back a :hover {
   transition: 0.3s;
-  background-color: #4bb357;
+  background-color: red;
 }
 
 .back div {
   font-size: 50px;
-  font-weight: 600;
-  color: blueviolet;
+  font-weight: 400;
+  color: yellow;
   text-align: center;
   padding-top: 10px;
-  padding: 50px;
+  padding: 40px;
   z-index: 50;
 }
 
