--- a/src/app/kanryo/[tohyoid]/page.module.css
+++ b/src/app/kanryo/[tohyoid]/page.module.css
@@ -6,7 +6,7 @@
   background-color: #ebe9d6;
   background-image: url("赤舞台大.jpg");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   /* top: 0;
   bottom: 0;
   left: 0;
@@ -18,13 +18,14 @@
 
 .back a {
   padding: 24px 24px;
-  background-color: rgb(240, 10, 94);
+  background-color: rgb(45, 185, 223);
   border-radius: 12px;
   text-decoration: none;
   transition: 0.3s;
   margin: 20px;
   text-align: center;
   color: aliceblue;
+  font-size: 35px;
   /* position: absolute;
   display: flex;
   top: 500px; */
@@ -35,7 +36,7 @@
 }
 
 .back div {
-  font-size: 50px;
+  font-size: 70px;
   font-weight: 400;
   color: yellow;
   text-align: center;
@@ -45,8 +46,5 @@
 }
 
 .back img {
-  width: 155px;
-  height: 300px;
-
-  left: 500px;
+  height: 500px;
 }
