投票官僚画面を改修

--- a/src/app/kanryo/[tohyoid]/page.module.css
+++ b/src/app/kanryo/[tohyoid]/page.module.css
@@ -46,5 +46,15 @@
 }
 
 .back img {
-  height: 500px;
+  height: 350px;
+}
+
+.fuwatto_fade_in {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+}
+.is_visible {
+  opacity: 1;
+  transform: translateY(0);
 }
