--- a/src/app/components/main/main.module.css
+++ b/src/app/components/main/main.module.css
@@ -3,7 +3,7 @@
   /* height: 100px; */
   background-color: red;
   /* font-size: 45px; */
-  font-size: 3.125vw;
+  font-size: clamp(20px, 3.125vw, 45px);
   font-weight: 800;
   text-align: center;
   color: white;
