--- a/src/app/components/opning/opning.module.css
+++ b/src/app/components/opning/opning.module.css
@@ -57,7 +57,7 @@
 /* 縦線 */
 .vertical_bar {
   position: absolute;
-  height: 100%;
+  height: 100vh;
   width: 100px;
   left: 70%;
   top: 0;
@@ -74,8 +74,8 @@
 /* 横線単体 */
 .horizontal_bar {
   height: 100px;
-  width: 100%;
-  top: 50%;
+  width: 100vw;
+  top: 60vh;
   left: 0;
   border-right: 100px;
   animation: fade-in 5s ease-in-out forwards;
