画像を追加。モーダルの出現位置を若干修正

--- a/src/app/components/modal/modal.module.css
+++ b/src/app/components/modal/modal.module.css
@@ -37,12 +37,9 @@
   pointer-events: auto;
   z-index: 1000;
   background: rgba(0, 0, 0, 0.6);
-  /* overflow: hidden; */
-  -webkit-box-sizing: border-box;
+  justify-content: center;
   box-sizing: border-box;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 
