モーダル大きくした

--- a/src/app/components/main/main.module.css
+++ b/src/app/components/main/main.module.css
@@ -1,7 +1,8 @@
-/* .window_body {
+.window_body {
   overflow-y: auto;
-  z-index: 0;
-} */
+  position: relative;
+  /* height: 200vh; */
+}
 
 /* 見出し */
 .main_font {
