--- a/src/app/components/opning/opning.module.css
+++ b/src/app/components/opning/opning.module.css
@@ -24,7 +24,6 @@
     transform: translateY(0);
   }
   100% {
-    /* これすぐに消える状態だからあとでコード書いて消す */
     pointer-events: none;
     transform: scale(10);
   }
@@ -40,19 +39,12 @@
 .back_color {
   position: relative;
   background-color: red;
-  height: 1000px;
+  height: 100vh;
   min-height: 100%;
   padding: 20px;
   animation: back_d 8s ease-in-out forwards;
   z-index: 0;
 }
-
-/* .border_tate {
-  border-right: 100px;
-  animation: fade-in 5s ease-in-out forwards;
-  background-color: aliceblue;
-  color: red;
-} */
 
 /* 縦線 */
 .vertical_bar {
@@ -90,13 +82,15 @@
 .back_color button {
   position: fixed;
   right: 10%;
-  bottom: 30px;
-  z-index: 100;
-  padding: 15px 25px;
+  bottom: 10%;
+  width: 10%;
+  height: 12%;
+  z-index: 10000;
+  /* padding: 15px 25px; */
   color: red;
   background-color: aliceblue;
-  border-radius: 15px;
-  border-width: 2 solid black;
+  border-radius: 1vw;
+  border-width: 2vw solid black;
   font-weight: 700;
-  font-size: large;
+  font-size: 2.3vw;
 }
